@@ -1,3 +1,13 @@
+2006-02-06 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b9
+
+ * SECURITY-FIX:
+   If you trick an admin or a ser who has owner privs in a gallery into
+   clicking on prepared link and it will cause them to insert a bad file path
+   into their album data which could then cause a local file execution bug.
+
+   The Team would like to thank
+   Tom Saville (seregon@bughunter.net) and his team from http://digitalarmaments.com
+
 2006-02-02 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b8
 
  * Change: Make select boxes in watermark form to stay at the value selected before a preview.
